# my-website-backend

./: .envrc  .gitignore  Cargo.toml  README.md  bun.nix  flake.nix  package.json
.sqlx/: query-1262253d84ebf51705e5ab1aaca5067d92f8258e3e10049adbb62a43392f109e.json  query-4c7638a57c4383358a81f73ff91bee92c85ad8f4c82f8fb5c3af30a7e38106ea.json  query-6ad623fe7670d5c832d51c31653633dc8a4d7ad91bb082aa477adf659d8dd39e.json  query-757186a446e15e35313267cdd2f9c57c1f60ad6ca1acd2850040fe39bac98994.json  query-92632106f3bcb4fc812d7f879753a6be82174b692991b63372903b814db9e421.json  query-950eb32110497e70b696fb7514089d1dc39ce11f9dad0e95752e654d5ae2b0a1.json  query-9638aac2a31816cf35e854e430a347a3b92340489c18a6d04768ff45b7ba8cb6.json  query-a7bbd21d179e39e057cf62776fc7cbb12f94f7060f61031fee2c0377be72c878.json  query-c961c83153e4f17828fe7e42be333f0238f95cd85ccbdf68b243e6e926b49b89.json  query-de991fad8f0ed319340726b03345c6b2c1b0ccf14c4f0681e312a45f2fadcd5b.json  query-de9aad750a34de16df825ad0978e47d63676b9a93e4e7a5cef5da6eb8bd94c0b.json
migrations/: 20250822223143_db.sql
src/: admin.rs  auth.rs  auth.ts  blog.rs  common.rs  general.rs  index.ts  main.rs
src/blogs/: example2.md  example4.md  ofc.md
src/db/: connect.ts  models.ts
src/folders/drfrost-solver/: index.html
src/projects/: chess.rs  mod.rs
src/routes/: avatar.ts  blog.ts  connections.ts  folders.ts  images.ts  leaderboards.ts  notifications.ts  profile.ts  quizspire.ts
src/utils/: email.ts  notifications.ts  profile.ts
src/webhooks/: chess.ts  connections.ts  index.ts  quizspire-docs.md  quizspire.ts
(+2 files in other folders)
