[package]
name = "my-website-backend"
version = "0.1.0"
edition = "2024"


[dependencies]
hmac = "0.12.1"
jwt = "0.16.0"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
serde = { version = "1.0.140", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
bcrypt = "0.17.1"
